# numx

./: .clang-format  .gitignore  README.md
experiment/runtime/: pool_allocator.h  runner_context.h
experiment/runtime/metal/: mtl_allocator.h  mtl_command_encoder.h  mtl_context.cpp  mtl_context.h  mtl_kernel.h
experiment/runtime/metal/kernels/: arg_reduce_col.metal  binary.metal  copy.metal  naive_gemm.metal  tiled_gemm.metal  unary.metal  utils.h
numx/: CMakeLists.txt  main.cpp  mnist.h  utils.h
numx/allocator/: allocator.h
numx/allocator/metal/: mtl_allocator.h
numx/array/: array.cpp  array.h  backend.cpp  backend.h
numx/core/: array.cpp  array.h  array_buffer.h  array_data.cpp  array_data.h  array_descriptor.h  array_id.h  array_iter.h  backend.cpp  backend.h  device.h  dtype.h  exceptions.h  functional.cpp  functional.h  op.h  op_impl.cpp  op_impl.h  range.h  shape.h
numx/graph/: functional.cpp  functional.h  graph.cpp  graph.h  graph_profiler.cpp  graph_profiler.h  op.cpp  op.h  toposort.cpp
numx/instrument/: memory_snapshot.h  memory_snapshot_info.h  profiler.cpp  profiler.h
numx/memory/: allocator.h  block.h  cache_manager.cpp  cache_manager.h  memory_block.h  memory_manager.h  memory_pool.h  resource_list.cpp  resource_list.h  runtime_allocator.h
numx/memory/metal/: mtl_allocator.h
numx/nn/: functional.h  linear.h  module.h  nn.h  parameter.h
numx/optim/: optim.h
numx/primitive/: array_buffer.h  array_data.cpp  array_data.h  array_id.h  array_iter.h  block.h  buffer_block.h  buffer_pool.h  device.h  dtype.h  exceptions.h  functional.cpp  functional.h  op.cpp  op.h  random.cpp  random.h  range.h  resource_list.cpp  resource_list.h  shape.h
numx/profiler/: memory_snapshot_info.h  profiler.cpp  profiler.h
numx/python/: array.cpp  array.h  bind.cpp  bind.h  module.h  optim.h  random.cpp  random.h
numx/random/: random.cpp  random.h  utils.cpp  utils.h
numx/runtime/: cache.cpp  cache.h  memory.h  memory_profiler.cpp  memory_profiler.h  memory_snapshot.h  profiler.cpp  profiler.h  runner.cpp  runner.h  runtime_context.h
numx/runtime/metal/: mtl_binary.cpp  mtl_context.cpp  mtl_context.h  mtl_copy.cpp  mtl_encoder.h  mtl_gemm.cpp  mtl_initializers.cpp  mtl_kernel.h  mtl_reduce.cpp  mtl_runner.cpp  mtl_runner.h  mtl_unary.cpp
numx/runtime/metal/kernels/: CMakeLists.txt  arg_reduce_all.metal  binary.h  binary.metal  copy.metal  initializers.metal  naive_gemm.metal  random.metal  reduce.h  reduce_all.metal  reduce_col.metal  tiled_gemm.metal  unary.h  unary.metal
python/: main.py  memory_profile.json  mnist.py
python/numx/core/: __init__.pyi
python/numx/nn/: __init__.pyi  functional.py  module.py
python/numx/optim/: __init__.pyi  optim.py
python/numx/profiler/: __init__.pyi
python/numx/random/: __init__.pyi
python/tests/: test_backprop.py  test_basic_nn.py  test_binary.py  test_initializers.py  test_matmul.py  test_reduce.py  test_transform.py  test_unary.py
tests/: CMakeLists.txt  test_resource_list.cpp  test_shape.cpp
